# cell-kn-mvp-etl-results

./: .gitignore  .gitmodules  README.md  pom.xml  pyproject.toml
data/external-for-egl-2026-02-26/: all_genes_human.csv  fetch_all_genes_human.csv  fetch_all_genes_human.py
docs/python/source/: conf.py  index.rst
docs/python/source/modules/: CellKnSchemaTupleWriter.rst
etl-results/: ArangoDbUtilities.py  AuthorToClResultsLoader.py  CellKnSchemaParser.py  ExternalApiResultsFetcher.py  ExternalApiResultsLoader.py  LoaderUtilities.py  NSForestResultsLoader.py  UniproIdMapper.py
src/main/: shell
src/main/python/: AnnotationResultsTupleWriter.py  ArangoDbUtilities.py  AuthorToClResultsTupleWriter.py  CellKnSchemaParser.py  CellKnSchemaTupleWriter.py  CellKnSchemaUtilities.py  E_Utilities.py  ExternalApiResultsFetcher.py  ExternalApiResultsTupleWriter.py  LoaderUtilities.py  NCBIDatasetsFetcher.py  NSForestResultsTupleWriter.py  OntologyParserLoader.py  OpenTargetsGGetQueries.py  UniProtIdMapper.py  ncbi  summarize_author_to_cl_mapping.py  summarize_external_api_results.py  summarize_nsforest_results.py
src/main/resources/ncbi/datasets/: generate-using-java-library.sh  (+1 more)
src/test/data/summaries/: cell-kn-mvp-external-api-results.json  hubmap-allen-brain-v1.7.json
src/test/python/: AnnotationResultsTupleWriterTestCase.py  ArangoDbUtilitiesTestCase.py  AuthorToClResultsTupleWriterTestCase.py  E_UtilitiesTestCase.py  ExternalApiResultsTupleWriterTestCase.py  LoaderUtilitiesTestCase.py  NSForestResultsTupleWriterTestCase.py  OntologyParserLoaderTestCase.py
(+4 files in other folders)
